Turn CAM1 into submodule
Signed-off-by: Dennis Behm <dennis.behm@de.ibm.com>

--- a/application-conf/file.properties
+++ b/application-conf/file.properties
@@ -181,3 +181,5 @@ transfer_deployType = JCL :: **/*.jcl
 #
 #zcee2_fileBuildRank=1 :: **/zosconnect_artefacts/services/**
 #zcee2_fileBuildRank=2 :: **/zosconnect_artefacts/requester/**/*.properties
+
+cobol_fileBuildRank=1 :: **/*M1.cbl
