--- a/application-conf/application.properties
+++ b/application-conf/application.properties
@@ -173,7 +173,7 @@ impactSearch=${copybookSearch}${pliincludeSearch}${cppHeaderSearch}${bmsSearch}$
 # More samples can be found along with the syntax for the search path configurations at:
 # https://www.ibm.com/docs/en/dbb/2.0.0?topic=apis-dependency-impact-resolution#6-resolving-logical-build-dependencies-to-local-physical-files
 #
-copybookSearch = search:${workspace}/?path=${application}/src/copy/*.cpy
+copybookSearch = search:${workspace}/?path=${application}/src/copy/*.cpy;imports/**/include/src/*.cpy
 
 #
 # pliincludeSearch
